# project1

./: .dockerignore  .env.example  .gitattributes  .gitignore  API_DOCS.md  Cargo.toml  Dockerfile  README.md  clippy.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build.yml  test.yml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: error.rs  lib.rs
crates/agent-core/src/llm/: client.rs  mod.rs  stats.rs  types.rs
crates/agent-core/src/scheduler/: engine.rs  mod.rs
crates/agent-core/src/session/: manager.rs  mod.rs
crates/agent-core/src/tool/: builtin.rs  mod.rs  registry.rs  types.rs
crates/agent-core/src/workflow/: engine.rs  mod.rs  types.rs
crates/agent-db/: Cargo.toml
crates/agent-db/src/: error.rs  lib.rs  models.rs  pool.rs
crates/agent-db/src/migrations/: 001_initial.sql  002_seed_config.sql  003_auth_config.sql  004_performance_indexes.sql
crates/agent-db/src/repo/: channel_repo.rs  config_repo.rs  message_repo.rs  mod.rs  session_repo.rs  task_repo.rs  workflow_repo.rs
crates/agent-db/tests/: db_test.rs
crates/agent-frontend/: index.html
crates/agent-frontend/css/: base.css  components.css  layout.css
crates/agent-frontend/js/: api.js  app.js  auth.js  chat.js  config.js  i18n.js  onboarding.js  realtime.js  search.js  sessions.js  shortcuts.js  tasks.js  workflow.js
crates/agent-server/: Cargo.toml
crates/agent-server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
crates/agent-server/src/channel/: feishu.rs  mod.rs  qq_bot.rs  webhook.rs  wechat_work.rs
crates/agent-server/src/middleware/: mod.rs  rate_limit.rs
crates/agent-server/src/notifications/: email.rs  mod.rs
crates/agent-server/src/routes/: auth.rs  backup.rs  channel.rs  chat.rs  config_api.rs  export.rs  health.rs  metrics.rs  mod.rs  monitor.rs  notifications.rs  openapi.rs  publish.rs  search.rs  session.rs  task.rs  workflow.rs  ws.rs
crates/agent-server/tests/: api_test.rs  e2e_test.rs
deploy/: README.md  docker-pull.sh  first-time-setup.sh
