[package]
name = "agent-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-db = { path = "../agent-db" }

tokio.workspace = true
axum = { workspace = true, features = ["macros", "ws", "multipart"] }
tower = { workspace = true, features = ["timeout"] }
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
tokio-stream.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
sqlx.workspace = true
async-trait.workspace = true
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
quick-xml = "0.39"
rand = "0.9"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
sysinfo.workspace = true
comrak.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }
lettre.workspace = true

[lib]
name = "agent_server"
path = "src/lib.rs"

[[bin]]
name = "agent-server"
path = "src/main.rs"

[lints]
workspace = true

[dev-dependencies]
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
